[package]
name = "chc-runtime"
version = "2.0.0-alpha.8"
authors = ["CHC Developers"]
edition = "2018"
license = "Unlicense"
description = "CHC Runtime"

[dependencies]
parity-scale-codec = { version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
# Pallets
babe = { package = 'pallet-babe', version = '2.0.0-alpha.8', default-features = false}
balances = { package = 'pallet-balances', version = '2.0.0-alpha.8', default-features = false }
grandpa = { package = 'pallet-grandpa', version = '2.0.0-alpha.8', default-features = false }
randomness-collective-flip = { package = 'pallet-randomness-collective-flip', version = '2.0.0-alpha.8', default-features = false }
sudo = { package = 'pallet-sudo', version = '2.0.0-alpha.8', default-features = false }
timestamp = { package = 'pallet-timestamp', version = '2.0.0-alpha.8', default-features = false }
transaction-payment = { package = 'pallet-transaction-payment', version = '2.0.0-alpha.8', default-features = false }
# Substrate core
frame-executive = { version = '2.0.0-alpha.8', default-features = false }
frame-support = { version = '2.0.0-alpha.8', default-features = false }
frame-system = { version = '2.0.0-alpha.8', default-features = false }
sp-api = { version = '2.0.0-alpha.8', default-features = false }
sp-block-builder = { version = '2.0.0-alpha.8', default-features = false }
sp-consensus-babe = { version = '0.8.0-alpha.8', default-features = false }
sp-core = { version = '2.0.0-alpha.8', default-features = false }
sp-finality-grandpa = { version = '2.0.0-alpha.8', default-features = false }
sp-inherents = { version = '2.0.0-alpha.8', default-features = false }
sp-io = { version = '2.0.0-alpha.8', default-features = false }
sp-offchain = { version = '2.0.0-alpha.8', default-features = false }
sp-runtime = { version = '2.0.0-alpha.8', default-features = false }
sp-session = { version = '2.0.0-alpha.8', default-features = false }
sp-std = { version = '2.0.0-alpha.8', default-features = false }
sp-transaction-pool = { version = '2.0.0-alpha.8', default-features = false }
sp-version = { version = '2.0.0-alpha.8', default-features = false }

resource-adoption = { version = '0.1.2', path = '../pallets/resource-adoption', default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-finality-grandpa/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "babe/std",
    "balances/std",
    "grandpa/std",
	  "randomness-collective-flip/std",
    "sudo/std",
    "timestamp/std",
    "transaction-payment/std",
    "resource-adoption/std"
]
