[package]
name = "resource-adoption"
version = "0.1.2"
authors = ["CHC Developers"]
edition = "2018"
license = "Unlicense"
description = "Pallet for CHC Runtime"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "safe-mix/std"
	  # 'sp-std/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-alpha.8', default-features = false }
frame-system = { version = '2.0.0-alpha.8', default-features = false }
sp-runtime = { version = '2.0.0-alpha.8', default-features = false }
sp-std = { version = '2.0.0-alpha.8', default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
timestamp = { package = 'pallet-timestamp', version = '2.0.0-alpha.8', default-features = false }


[dev-dependencies]
sp-core = { version = '2.0.0-alpha.8', default-features = false }
sp-io = { version = '2.0.0-alpha.8', default-features = false }

